# Adaptable-Player

./: CMakeLists.txt
3rd/asio/asio/: executor.hpp  io_context_strand.hpp  system_executor.hpp
3rd/asio/asio/detail/: strand_executor_service.hpp  win_iocp_io_context.hpp
3rd/imgui/: imgui.cpp  imgui.h  imgui_tables.cpp
include/api/: ApplicationProtocolBase.h  KcpClient.h  KcpServer.h  TcpClient.h
include/asio/asio/: io_context.hpp  strand.hpp  thread_pool.hpp
include/asio/asio/detail/: scheduler.hpp  strand_service.hpp
include/asio/asio/detail/impl/: strand_executor_service.hpp  strand_service.hpp
include/detail/: error_handler.h
include/imgui/: CMakeLists.txt  imgui_internal.h
include/opengl/: glad.c  glad.h
libs/: glfw3.lib
src/: CMakeLists.txt  loop_config.hpp  main.cpp
src/Data/: DataWrapper.hpp
src/ThreadSafe/: ProducerConsumerOptional.cpp  ProducerConsumerOptional.h  ProducerConsumerQueue.cpp  ProducerConsumerQueue.h
src/example/: EP.cpp  EP.h  UrlMap.hpp  Views.cpp  main.cpp  ui.hpp
src/kcp/: Connection.hpp  KcpClient.cpp  KcpClient.h  KcpServer.cpp
src/tcp/: TcpClient.cpp  TcpServer.cpp
src/ui/: PlayerUi.cpp  PlayerUi.h  ProtocolSelector.cpp  ProtocolSelector.h  ui.hpp
src/ui/utils/: GuiLoader.hpp
